[Internal]Add validate functionality in schema_checker (#1681)
# Description

Add validate functionality in schema_checker.

Warning is also treated as an error.

![image](https://github.com/microsoft/promptflow/assets/2208599/5b691c8d-ee6d-479a-823e-d2eb0e9facc9)

# All Promptflow Contribution checklist:
- [x] **The pull request does not introduce [breaking changes].**
- [ ] **CHANGELOG is updated for new features, bug fixes or other
significant changes.**
- [ ] **I have read the [contribution guidelines](../CONTRIBUTING.md).**
- [ ] **Create an issue and link to the pull request to get dedicated
review from promptflow team. Learn more: [suggested
workflow](../CONTRIBUTING.md#suggested-workflow).**

## General Guidelines and Best Practices
- [ ] Title of the pull request is clear and informative.
- [ ] There are a small number of commits, each of which have an
informative message. This means that previously merged commits do not
appear in the history of the PR. For more information on cleaning up the
commits in your PR, [see this
page](https://github.com/Azure/azure-powershell/blob/master/documentation/development-docs/cleaning-up-commits.md).

### Testing Guidelines
- [ ] Pull request includes test coverage for the included changes.

--- a/.github/workflows/flowdag_schema_check.yml
+++ b/.github/workflows/flowdag_schema_check.yml
@@ -5,9 +5,13 @@ on:
     paths:
       - examples/**
       - .github/workflows/flowdag_schema_check.yml
+      - scripts/readme/schema_checker.py
+env:
+  IS_IN_CI_PIPELINE: "true"
 jobs:
   examples_flowdag_schema_check:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
       - run: env | sort >> $GITHUB_OUTPUT
@@ -15,15 +19,17 @@ jobs:
         uses: "./.github/actions/step_create_python_environment"
         with:
           pythonVersion: 3.9
-      - run: pip install -r ${{ github.workspace }}/examples/dev_requirements.txt
+      - run: |
+          pip install -r ${{ github.workspace }}/examples/dev_requirements.txt
+          pip install -r ${{ github.workspace }}/examples/requirements.txt
       - name: Summarize check status
         id: summarize_check_status
         working-directory: ${{ github.workspace }}
         shell: pwsh
         env:
           PYTHONPATH: ${{ github.workspace }}/src/promptflow
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          cd ${{ github.workspace }}/src/promptflow
-          pip install -e .
+          cd ${{ github.workspace }}/src
+          pip install -e promptflow[azure]
+          pip install -e promptflow-tools
           python ${{ github.workspace }}/scripts/readme/schema_checker.py
