--- a/.github/workflows/samples_flows_chat_chat_with_image.yml
+++ b/.github/workflows/samples_flows_chat_chat_with_image.yml
@@ -84,25 +84,30 @@ jobs:
         run: |
           cat bash_script.sh
       - name: Run scripts against canary workspace (scheduled runs only)
+        uses: azure/CLI@v2
         if: github.event_name == 'schedule'
-        working-directory: examples/flows/chat/chat-with-image
-        run: |
-          export aoai_api_key=${{secrets.AOAI_GPT_4V_KEY }}
-          export aoai_api_endpoint=${{ secrets.AOAI_GPT_4V_ENDPOINT }}
-          export test_workspace_sub_id=${{ secrets.TEST_WORKSPACE_SUB_ID }}
-          export test_workspace_rg=${{ secrets.TEST_WORKSPACE_RG }}
-          export test_workspace_name=${{ secrets.TEST_WORKSPACE_NAME_CANARY }}
-          bash bash_script.sh
+        with:
+          azcliversion: latest
+          inlineScript: |
+            cd $GITHUB_WORKSPACE/examples/flows/chat/chat-with-image
+            export aoai_api_key=${{secrets.AOAI_GPT_4V_KEY }}
+            export aoai_api_endpoint=${{ secrets.AOAI_GPT_4V_ENDPOINT }}
+            export test_workspace_sub_id=${{ secrets.TEST_WORKSPACE_SUB_ID }}
+            export test_workspace_rg=${{ secrets.TEST_WORKSPACE_RG }}
+            export test_workspace_name=${{ secrets.TEST_WORKSPACE_NAME_CANARY }}
+            bash bash_script.sh
       - name: Run scripts against production workspace
+        uses: azure/CLI@v2
         if: github.event_name != 'schedule'
-        working-directory: examples/flows/chat/chat-with-image
-        run: |
-          export aoai_api_key=${{secrets.AOAI_GPT_4V_KEY }}
-          export aoai_api_endpoint=${{ secrets.AOAI_GPT_4V_ENDPOINT }}
-          export test_workspace_sub_id=${{ secrets.TEST_WORKSPACE_SUB_ID }}
-          export test_workspace_rg=${{ secrets.TEST_WORKSPACE_RG }}
-          export test_workspace_name=${{ secrets.TEST_WORKSPACE_NAME_PROD }}
-          bash bash_script.sh
+        with:
+          azcliversion: latest
+          inlineScript: |
+            export aoai_api_key=${{secrets.AOAI_GPT_4V_KEY }}
+            export aoai_api_endpoint=${{ secrets.AOAI_GPT_4V_ENDPOINT }}
+            export test_workspace_sub_id=${{ secrets.TEST_WORKSPACE_SUB_ID }}
+            export test_workspace_rg=${{ secrets.TEST_WORKSPACE_RG }}
+            export test_workspace_name=${{ secrets.TEST_WORKSPACE_NAME_PROD }}
+            bash bash_script.sh
       - name: Pip List for Debug
         if : ${{ always() }}
         working-directory: examples/flows/chat/chat-with-image
@@ -110,7 +115,7 @@ jobs:
           pip list
       - name: Upload artifact
         if: ${{ always() }}
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: artifact
           path: examples/flows/chat/chat-with-image/bash_script.sh
