--- a/.github/workflows/samples_flows_chat_chat_with_pdf.yml
+++ b/.github/workflows/samples_flows_chat_chat_with_pdf.yml
@@ -97,6 +97,7 @@ jobs:
         with:
           azcliversion: latest
           inlineScript: |
+            cd $GITHUB_WORKSPACE/examples/flows/chat/chat-with-pdf
             export aoai_api_key=${{secrets.AOAI_API_KEY_TEST }}
             export aoai_api_endpoint=${{ secrets.AOAI_API_ENDPOINT_TEST }}
             export AZURE_OPENAI_API_KEY=${{secrets.AOAI_API_KEY_TEST }}
@@ -110,6 +111,7 @@ jobs:
         with:
           azcliversion: latest
           inlineScript: |
+            cd $GITHUB_WORKSPACE/examples/flows/chat/chat-with-pdf
             export aoai_api_key=${{secrets.AOAI_API_KEY_TEST }}
             export aoai_api_endpoint=${{ secrets.AOAI_API_ENDPOINT_TEST }}
             export AZURE_OPENAI_API_KEY=${{secrets.AOAI_API_KEY_TEST }}
