--- a/.github/workflows/samples_prompty_eval_basic.yml
+++ b/.github/workflows/samples_prompty_eval_basic.yml
@@ -87,6 +87,7 @@ jobs:
         with:
           azcliversion: latest
           inlineScript: |
+            cd $GITHUB_WORKSPACE/examples/prompty/eval-basic
             export aoai_api_key=${{secrets.AOAI_API_KEY_TEST }}
             export aoai_api_endpoint=${{ secrets.AOAI_API_ENDPOINT_TEST }}
             export AZURE_OPENAI_API_KEY=${{secrets.AOAI_API_KEY_TEST }}
@@ -100,6 +101,7 @@ jobs:
         with:
           azcliversion: latest
           inlineScript: |
+            cd $GITHUB_WORKSPACE/examples/prompty/eval-basic
             export aoai_api_key=${{secrets.AOAI_API_KEY_TEST }}
             export aoai_api_endpoint=${{ secrets.AOAI_API_ENDPOINT_TEST }}
             export AZURE_OPENAI_API_KEY=${{secrets.AOAI_API_KEY_TEST }}
