--- a/.github/workflows/samples_tools_use_cases_dynamic_list_input_tool_showcase.yml
+++ b/.github/workflows/samples_tools_use_cases_dynamic_list_input_tool_showcase.yml
@@ -87,6 +87,7 @@ jobs:
         with:
           azcliversion: latest
           inlineScript: |
+            cd $GITHUB_WORKSPACE/examples/tools/use-cases/dynamic-list-input-tool-showcase
             export aoai_api_key=${{secrets.AOAI_API_KEY_TEST }}
             export aoai_api_endpoint=${{ secrets.AOAI_API_ENDPOINT_TEST }}
             export AZURE_OPENAI_API_KEY=${{secrets.AOAI_API_KEY_TEST }}
@@ -100,6 +101,7 @@ jobs:
         with:
           azcliversion: latest
           inlineScript: |
+            cd $GITHUB_WORKSPACE/examples/tools/use-cases/dynamic-list-input-tool-showcase
             export aoai_api_key=${{secrets.AOAI_API_KEY_TEST }}
             export aoai_api_endpoint=${{ secrets.AOAI_API_ENDPOINT_TEST }}
             export AZURE_OPENAI_API_KEY=${{secrets.AOAI_API_KEY_TEST }}
