--- a/.github/workflows/samples_flows_standard_flow_with_additional_includes.yml
+++ b/.github/workflows/samples_flows_standard_flow_with_additional_includes.yml
@@ -91,28 +91,29 @@ jobs:
         with:
           azPSVersion: "latest"
           inlineScript: |
-            cd $GITHUB_WORKSPACE/examples/flows/standard/flow-with-additional-includes
-            export aoai_api_key=${{secrets.AOAI_API_KEY_TEST }}
-            export aoai_api_endpoint=${{ secrets.AOAI_API_ENDPOINT_TEST }}
-            export AZURE_OPENAI_API_KEY=${{secrets.AOAI_API_KEY_TEST }}
-            export AZURE_OPENAI_ENDPOINT=${{ secrets.AOAI_API_ENDPOINT_TEST }}
-            export test_workspace_sub_id=${{ secrets.TEST_WORKSPACE_SUB_ID }}
-            export test_workspace_rg=${{ secrets.TEST_WORKSPACE_RG }}
-            export test_workspace_name=${{ secrets.TEST_WORKSPACE_NAME_CANARY }}
+            cd $Env:GITHUB_WORKSPACE/examples/flows/standard/flow-with-additional-includes
+            $Env:aoai_api_key=${{secrets.AOAI_API_KEY_TEST }}
+            $Env:aoai_api_endpoint=${{ secrets.AOAI_API_ENDPOINT_TEST }}
+            $Env:AZURE_OPENAI_API_KEY=${{secrets.AOAI_API_KEY_TEST }}
+            $Env:AZURE_OPENAI_ENDPOINT=${{ secrets.AOAI_API_ENDPOINT_TEST }}
+            $Env:test_workspace_sub_id=${{ secrets.TEST_WORKSPACE_SUB_ID }}
+            $Env:test_workspace_rg=${{ secrets.TEST_WORKSPACE_RG }}
+            $Env:test_workspace_name=${{ secrets.TEST_WORKSPACE_NAME_CANARY }}
+            bash bash_script.sh
       - name: Run scripts against production workspace
         uses: azure/powershell@v1
         if: github.event_name != 'schedule'
         with:
           azPSVersion: "latest"
           inlineScript: |
-            cd $GITHUB_WORKSPACE/examples/flows/standard/flow-with-additional-includes
-            export aoai_api_key=${{secrets.AOAI_API_KEY_TEST }}
-            export aoai_api_endpoint=${{ secrets.AOAI_API_ENDPOINT_TEST }}
-            export AZURE_OPENAI_API_KEY=${{secrets.AOAI_API_KEY_TEST }}
-            export AZURE_OPENAI_ENDPOINT=${{ secrets.AOAI_API_ENDPOINT_TEST }}
-            export test_workspace_sub_id=${{ secrets.TEST_WORKSPACE_SUB_ID }}
-            export test_workspace_rg=${{ secrets.TEST_WORKSPACE_RG }}
-            export test_workspace_name=${{ secrets.TEST_WORKSPACE_NAME_PROD }}
+            cd $Env:GITHUB_WORKSPACE/examples/flows/standard/flow-with-additional-includes
+            $Env:aoai_api_key=${{secrets.AOAI_API_KEY_TEST }}
+            $Env:aoai_api_endpoint=${{ secrets.AOAI_API_ENDPOINT_TEST }}
+            $Env:AZURE_OPENAI_API_KEY=${{secrets.AOAI_API_KEY_TEST }}
+            $Env:AZURE_OPENAI_ENDPOINT=${{ secrets.AOAI_API_ENDPOINT_TEST }}
+            $Env:test_workspace_sub_id=${{ secrets.TEST_WORKSPACE_SUB_ID }}
+            $Env:test_workspace_rg=${{ secrets.TEST_WORKSPACE_RG }}
+            $Env:test_workspace_name=${{ secrets.TEST_WORKSPACE_NAME_PROD }}
             bash bash_script.sh
       - name: Pip List for Debug
         if : ${{ always() }}
