--- a/.github/workflows/samples_flows_standard_basic_with_builtin_llm.yml
+++ b/.github/workflows/samples_flows_standard_basic_with_builtin_llm.yml
@@ -71,7 +71,7 @@ jobs:
         working-directory: ${{ github.workspace }}
         run: pf connection create --file examples/connections/azure_openai.yml --set api_key=${{ secrets.AOAI_API_KEY_TEST }} api_base=${{ secrets.AOAI_API_ENDPOINT_TEST }}
       - name: Azure Login
-        uses: azure/login@v2
+        uses: azure/login@v1
         with:
           subscription-id: ${{secrets.AZURE_SUBSCRIPTION_ID}}
           tenant-id: ${{secrets.AZURE_TENANT_ID}}
@@ -86,35 +86,29 @@ jobs:
         run: |
           cat bash_script.sh
       - name: Run scripts against canary workspace (scheduled runs only)
-        uses: azure/powershell@v1
         if: github.event_name == 'schedule'
-        with:
-          azPSVersion: "latest"
-          inlineScript: |
-            cd $Env:GITHUB_WORKSPACE/examples/flows/standard/basic-with-builtin-llm
-            $Env:aoai_api_key='${{secrets.AOAI_API_KEY_TEST }}'
-            $Env:aoai_api_endpoint='${{ secrets.AOAI_API_ENDPOINT_TEST }}'
-            $Env:AZURE_OPENAI_API_KEY='${{secrets.AOAI_API_KEY_TEST }}'
-            $Env:AZURE_OPENAI_ENDPOINT='${{ secrets.AOAI_API_ENDPOINT_TEST }}'
-            $Env:test_workspace_sub_id='${{ secrets.TEST_WORKSPACE_SUB_ID }}'
-            $Env:test_workspace_rg='${{ secrets.TEST_WORKSPACE_RG }}'
-            $Env:test_workspace_name='${{ secrets.TEST_WORKSPACE_NAME_CANARY }}'
-            bash bash_script.sh
+        working-directory: examples/flows/standard/basic-with-builtin-llm
+        run: |
+          export aoai_api_key=${{secrets.AOAI_API_KEY_TEST }}
+          export aoai_api_endpoint=${{ secrets.AOAI_API_ENDPOINT_TEST }}
+          export AZURE_OPENAI_API_KEY=${{secrets.AOAI_API_KEY_TEST }}
+          export AZURE_OPENAI_ENDPOINT=${{ secrets.AOAI_API_ENDPOINT_TEST }}
+          export test_workspace_sub_id=${{ secrets.TEST_WORKSPACE_SUB_ID }}
+          export test_workspace_rg=${{ secrets.TEST_WORKSPACE_RG }}
+          export test_workspace_name=${{ secrets.TEST_WORKSPACE_NAME_CANARY }}
+          bash bash_script.sh
       - name: Run scripts against production workspace
-        uses: azure/powershell@v1
         if: github.event_name != 'schedule'
-        with:
-          azPSVersion: "latest"
-          inlineScript: |
-            cd $Env:GITHUB_WORKSPACE/examples/flows/standard/basic-with-builtin-llm
-            $Env:aoai_api_key='${{secrets.AOAI_API_KEY_TEST }}'
-            $Env:aoai_api_endpoint='${{ secrets.AOAI_API_ENDPOINT_TEST }}'
-            $Env:AZURE_OPENAI_API_KEY='${{secrets.AOAI_API_KEY_TEST }}'
-            $Env:AZURE_OPENAI_ENDPOINT='${{ secrets.AOAI_API_ENDPOINT_TEST }}'
-            $Env:test_workspace_sub_id='${{ secrets.TEST_WORKSPACE_SUB_ID }}'
-            $Env:test_workspace_rg='${{ secrets.TEST_WORKSPACE_RG }}'
-            $Env:test_workspace_name='${{ secrets.TEST_WORKSPACE_NAME_PROD }}'
-            bash bash_script.sh
+        working-directory: examples/flows/standard/basic-with-builtin-llm
+        run: |
+          export aoai_api_key=${{secrets.AOAI_API_KEY_TEST }}
+          export aoai_api_endpoint=${{ secrets.AOAI_API_ENDPOINT_TEST }}
+          export AZURE_OPENAI_API_KEY=${{secrets.AOAI_API_KEY_TEST }}
+          export AZURE_OPENAI_ENDPOINT=${{ secrets.AOAI_API_ENDPOINT_TEST }}
+          export test_workspace_sub_id=${{ secrets.TEST_WORKSPACE_SUB_ID }}
+          export test_workspace_rg=${{ secrets.TEST_WORKSPACE_RG }}
+          export test_workspace_name=${{ secrets.TEST_WORKSPACE_NAME_PROD }}
+          bash bash_script.sh
       - name: Pip List for Debug
         if : ${{ always() }}
         working-directory: examples/flows/standard/basic-with-builtin-llm
