--- a/src/promptflow/tests/test_configs/eager_flows/chat-basic/run.yml
+++ b/src/promptflow/tests/test_configs/eager_flows/chat-basic/run.yml
@@ -2,6 +2,8 @@ $schema: https://azuremlschemas.azureedge.net/promptflow/latest/Run.schema.json
 flow: .
 data: data.jsonl
 init:
-  connection: open_ai_connection
+  model_config:
+    connection: open_ai_connection
+    azure_deployment: gpt-35-turbo
 column_mapping:
   question: ${data.question}
