--- a/.github/workflows/samples_tutorials_e2e_development_chat_with_pdf.yml
+++ b/.github/workflows/samples_tutorials_e2e_development_chat_with_pdf.yml
@@ -133,3 +133,36 @@ jobs:
         with:
           name: artifact
           path: examples/tutorials/e2e-development/bash_script.sh
+      - name: Azure Login Again
+        uses: azure/powershell@v1
+        with:
+          azPSVersion: "latest"
+          inlineScript: |
+            Disconnect-AzAccount
+      - name: Azure Login Again_login
+        uses: azure/login@v1
+        with:
+          subscription-id: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+          tenant-id: ${{secrets.AZURE_TENANT_ID}}
+          client-id: ${{secrets.AZURE_CLIENT_ID}}
+          enable-AzPSSession: true
+      - name: Run backup scripts against canary workspace (scheduled runs only)
+        if: github.event_name == 'schedule'
+        working-directory: examples/tutorials/e2e-development
+        run: |
+          export aoai_api_key=${{secrets.AOAI_GPT_4V_KEY }}
+          export aoai_api_endpoint=${{ secrets.AOAI_GPT_4V_ENDPOINT }}
+          export test_workspace_sub_id=${{ secrets.TEST_WORKSPACE_SUB_ID }}
+          export test_workspace_rg=${{ secrets.TEST_WORKSPACE_RG }}
+          export test_workspace_name=${{ secrets.TEST_WORKSPACE_NAME_CANARY }}
+          bash bash_script_pytest.sh
+      - name: Run backup scripts against production workspace
+        if: github.event_name != 'schedule'
+        working-directory: examples/tutorials/e2e-development
+        run: |
+          export aoai_api_key=${{secrets.AOAI_GPT_4V_KEY }}
+          export aoai_api_endpoint=${{ secrets.AOAI_GPT_4V_ENDPOINT }}
+          export test_workspace_sub_id=${{ secrets.TEST_WORKSPACE_SUB_ID }}
+          export test_workspace_rg=${{ secrets.TEST_WORKSPACE_RG }}
+          export test_workspace_name=${{ secrets.TEST_WORKSPACE_NAME_PROD }}
+          bash bash_script_pytest.sh
