--- a/.github/workflows/samples_flows_standard_basic_with_builtin_llm.yml
+++ b/.github/workflows/samples_flows_standard_basic_with_builtin_llm.yml
@@ -70,6 +70,11 @@ jobs:
       - name: Create AOAI Connection from YAML
         working-directory: ${{ github.workspace }}
         run: pf connection create --file examples/connections/azure_openai.yml --set api_key=${{ secrets.AOAI_API_KEY_TEST }} api_base=${{ secrets.AOAI_API_ENDPOINT_TEST }}
+      - name: Random Wait
+        uses: AliSajid/random-wait-action@v1
+        with:
+          minimum: 0
+          maximum: 10
       - name: Azure Login
         uses: azure/login@v1
         with:
