--- a/.github/workflows/samples_tracing_autogengroupchat_traceautogengroupchat.yml
+++ b/.github/workflows/samples_tracing_autogengroupchat_traceautogengroupchat.yml
@@ -59,6 +59,11 @@ jobs:
           fi
       - name: Create Aoai Connection
         run: pf connection create -f ${{ github.workspace }}/examples/connections/azure_openai.yml --set api_key="${{ secrets.AOAI_API_KEY_TEST }}" api_base="${{ secrets.AOAI_API_ENDPOINT_TEST }}"
+      - name: Random Wait
+        uses: AliSajid/random-wait-action@v1
+        with:
+          minimum: 1
+          maximum: 10
       - name: Azure Login
         uses: azure/login@v1
         with:
