--- a/.github/workflows/samples_tutorials_e2e_development_chat_with_pdf.yml
+++ b/.github/workflows/samples_tutorials_e2e_development_chat_with_pdf.yml
@@ -83,6 +83,11 @@ jobs:
           if [[ -e run.yml ]]; then
             sed -i -e "s/\${azure_open_ai_connection.api_key}/${{ secrets.AOAI_API_KEY_TEST }}/g" -e "s/\${azure_open_ai_connection.api_base}/$gpt_base/g" run.yml
           fi
+      - name: Random Wait
+        uses: AliSajid/random-wait-action@v1
+        with:
+          minimum: 0
+          maximum: 10
       - name: Azure Login
         uses: azure/login@v1
         with:
