--- a/.github/workflows/samples_flows_chat_chatwithpdf_chatwithpdfazure.yml
+++ b/.github/workflows/samples_flows_chat_chatwithpdf_chatwithpdfazure.yml
@@ -70,7 +70,7 @@ jobs:
             pf connection create --file azure_openai.yml --set api_key=$AOAI_API_KEY api_base=$AOAI_API_ENDPOINT
           fi
       - name: Random Wait
-        uses: AliSajid/random-wait-action@v1
+        uses: AliSajid/random-wait-action@main
         with:
           minimum: 1
           maximum: 10
