--- a/.github/workflows/samples_getstarted_flowasfunction.yml
+++ b/.github/workflows/samples_getstarted_flowasfunction.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Create new Aoai Connection
         run: pf connection create -f ${{ github.workspace }}/examples/connections/azure_openai.yml --set api_key="${{ secrets.AOAI_API_KEY_TEST }}" api_base="${{ secrets.AOAI_API_ENDPOINT_TEST }}" name=new_ai_connection
       - name: Random Wait
-        uses: AliSajid/random-wait-action@v1
+        uses: AliSajid/random-wait-action@main
         with:
           minimum: 1
           maximum: 10
