Add how to build copilot tutorial (#2688)
# Description

Add how to build copilot tutorial with test data gen, evaluation flow
and simulation flow.

# All Promptflow Contribution checklist:
- [ ] **The pull request does not introduce [breaking changes].**
- [ ] **CHANGELOG is updated for new features, bug fixes or other
significant changes.**
- [ ] **I have read the [contribution guidelines](../CONTRIBUTING.md).**
- [ ] **Create an issue and link to the pull request to get dedicated
review from promptflow team. Learn more: [suggested
workflow](../CONTRIBUTING.md#suggested-workflow).**

## General Guidelines and Best Practices
- [ ] Title of the pull request is clear and informative.
- [ ] There are a small number of commits, each of which have an
informative message. This means that previously merged commits do not
appear in the history of the PR. For more information on cleaning up the
commits in your PR, [see this
page](https://github.com/Azure/azure-powershell/blob/master/documentation/development-docs/cleaning-up-commits.md).

### Testing Guidelines
- [ ] Pull request includes test coverage for the included changes.

---------

Co-authored-by: yalu4 <yalu4@microsoft.com>
Co-authored-by: Yao <46446115+16oeahr@users.noreply.github.com>
Co-authored-by: cs_lucky <si.chen@microsoft.com>
Co-authored-by: chenslucky <75061414+chenslucky@users.noreply.github.com>
Co-authored-by: chjinche <49483542+chjinche@users.noreply.github.com>
Co-authored-by: Ge Gao <gega@microsoft.com>
Co-authored-by: chjinche <chjinche@outlook.com>
Co-authored-by: Meng Lan <mengla@microsoft.com>

--- a/.gitignore
+++ b/.gitignore
@@ -173,6 +173,8 @@ connection.json
 .azureml
 # dummy custom tool package example
 hello-world-proj/**
+# gen test data config
+examples/gen_test_data/config.yml
 # secrets
 **/connections.json
 
