--- a/.github/workflows/promptflow-executor-unit-test.yml
+++ b/.github/workflows/promptflow-executor-unit-test.yml
@@ -22,6 +22,7 @@ on:
       - src/promptflow-core/promptflow/**
       - src/promptflow-devkit/promptflow/**
       - scripts/building/**
+      - src/promptflow-recording/recordings/local/executor_node_cache.*
       - .github/workflows/promptflow-executor-unit-test.yml
   workflow_dispatch:
 env:
