--- a/examples/flex-flows/chat-basic/flow.flex.yaml
+++ b/examples/flex-flows/chat-basic/flow.flex.yaml
@@ -1,5 +1,6 @@
 $schema: https://azuremlschemas.azureedge.net/promptflow/latest/Flow.schema.json
 entry: flow:ChatFlow
+sample: sample.json
 environment:
   # image: mcr.microsoft.com/azureml/promptflow/promptflow-python
   python_requirements_txt: requirements.txt
