--- a/.github/workflows/build_msi_installer.yml
+++ b/.github/workflows/build_msi_installer.yml
@@ -28,6 +28,9 @@ permissions:
 env:
   packageSetupType: promptflow_with_extra
   testWorkingDirectory: src/promptflow
+  AZURE_ACCOUNT_NAME: promptflowartifact
+  AZURE_MSI_CONTAINER_NAME: msi-installer
+  AZURE_PORTABLE_CONTAINER_NAME: portable-installer
 
 jobs:
   build_msi_installer:
@@ -187,7 +190,7 @@ jobs:
       - name: Download JSON file from Azure Blob Storage
         id: download-json
         run: |
-          az storage blob download --account-name promptflowartifact --container-name msi-installer --name latest_version.json --file downloaded_version.json
+          az storage blob download --account-name ${{ env.AZURE_ACCOUNT_NAME }} --container-name ${{ env.AZURE_MSI_CONTAINER_NAME }} --name latest_version.json --file downloaded_version.json --auth-mode login
           $downloaded_version = (Get-Content downloaded_version.json | ConvertFrom-Json).promptflow
           echo "::set-output name=downloaded_version::$downloaded_version"
 
@@ -203,28 +206,32 @@ jobs:
             $jsonContent | Out-File -FilePath latest_version.json -Encoding UTF8
 
             Write-Output "Created latest_version.json with version: $version"
-            az storage blob upload --account-name promptflowartifact --container-name msi-installer --file "latest_version.json" --name "latest_version.json" --overwrite
+            az storage blob upload --account-name ${{ env.AZURE_ACCOUNT_NAME }} --container-name ${{ env.AZURE_MSI_CONTAINER_NAME }} --file "latest_version.json" --name "latest_version.json" --overwrite --auth-mode login
           } else {
             Write-Output "skip uploading since version input isn't greater than latest version or does not start with '1.'"
           }
 
       - name: Upload to Azure Storage
         run: |
+          function Upload-File($filePath, $blobName, $containerName) {
+            az storage blob upload --account-name ${{ env.AZURE_ACCOUNT_NAME }} --container-name $containerName --file $filePath --name $blobName --overwrite --auth-mode login
+          }
+    
           $msi_files = Get-ChildItem -Path 'scripts/installer/windows/out/' -Filter *.msi
           foreach ($msi_file in $msi_files) {
-          if ($env:INPUT_UPLOADASLATEST -ieq 'True') {
-            az storage blob upload --account-name promptflowartifact --container-name msi-installer --file "scripts/installer/windows/out/$($msi_file.Name)" --name "promptflow.msi" --overwrite
-            az storage blob copy start --account-name promptflowartifact --destination-container msi-installer --destination-blob "$($msi_file.Name)" --source-container msi-installer --source-blob "promptflow.msi"
-          } else {
-            az storage blob upload --account-name promptflowartifact --container-name msi-installer --file "scripts/installer/windows/out/$($msi_file.Name)" --name "$($msi_file.Name)" --overwrite
-          }
+            if ($env:INPUT_UPLOADASLATEST -ieq 'True') {
+              Upload-File "scripts/installer/windows/out/$($msi_file.Name)" "promptflow.msi" ${{ env.AZURE_MSI_CONTAINER_NAME }}
+              az storage blob copy start --account-name ${{ env.AZURE_ACCOUNT_NAME }} --destination-container ${{ env.AZURE_MSI_CONTAINER_NAME }} --destination-blob "$($msi_file.Name)" --source-container ${{ env.AZURE_MSI_CONTAINER_NAME }} --source-blob "promptflow.msi" --auth-mode login
+            } else {
+              Upload-File "scripts/installer/windows/out/$($msi_file.Name)" "$($msi_file.Name)" ${{ env.AZURE_MSI_CONTAINER_NAME }}
+            }
           }
           # Upload zip file
           if ($env:INPUT_UPLOADASLATEST -ieq 'True') {
-            az storage blob upload --account-name promptflowartifact --container-name portable-installer --file "promptflow-${{ steps.get-version.outputs.version }}.zip" --name "promptflow.zip" --overwrite
-            az storage blob copy start --account-name promptflowartifact --destination-container portable-installer --destination-blob "promptflow-${{ steps.get-version.outputs.version }}.zip" --source-container portable-installer --source-blob "promptflow.zip"
+            Upload-File "promptflow-${{ steps.get-version.outputs.version }}.zip" "promptflow.zip" ${{ env.AZURE_PORTABLE_CONTAINER_NAME }}
+            az storage blob copy start --account-name ${{ env.AZURE_ACCOUNT_NAME }} --destination-container ${{ env.AZURE_PORTABLE_CONTAINER_NAME }} --destination-blob "promptflow-${{ steps.get-version.outputs.version }}.zip" --source-container ${{ env.AZURE_PORTABLE_CONTAINER_NAME }} --source-blob "promptflow.zip" --auth-mode login
           } else {
-            az storage blob upload --account-name promptflowartifact --container-name portable-installer --file "promptflow-${{ steps.get-version.outputs.version }}.zip" --name "promptflow-${{ steps.get-version.outputs.version }}.zip" --overwrite
+            Upload-File "promptflow-${{ steps.get-version.outputs.version }}.zip" "promptflow-${{ steps.get-version.outputs.version }}.zip" ${{ env.AZURE_PORTABLE_CONTAINER_NAME }}
           }
         env:
           INPUT_UPLOADASLATEST: ${{ github.event.inputs.uploadAsLatest }}
