--- a/src/promptflow-core/pyproject.toml
+++ b/src/promptflow-core/pyproject.toml
@@ -76,7 +76,7 @@ promptflow-recording = {path = "../promptflow-recording"}
 [tool.poetry.group.test.dependencies]
 pytest = "*"
 pytest-cov = "*"
-pytest-xdist = "*"
+pytest-xdist = {extras = ["psutil"], version = "*"}
 pytest-mock = "*"
 mock = "*"
 
@@ -95,7 +95,6 @@ markers = [
 # durations - list the slowest test durations
 addopts = """
 --junit-xml=test-results.xml \
---dist loadfile \
 --log-level=info \
 --log-format="%(asctime)s %(levelname)s %(message)s" \
 --log-date-format="[%Y-%m-%d %H:%M:%S]" \
